--- a/src/hooks/useClickableProps/__stories__/useClickableProps.stories.mdx
+++ b/src/hooks/useClickableProps/__stories__/useClickableProps.stories.mdx
@@ -70,9 +70,9 @@ Return props for making an element or component clickable by mouse and keyboard 
     type="(event: React.MouseEvent) => void"
     description={<>Mouse down callback.</>}
   />
-  <FunctionArgument name="disabled" type="boolean" description={<>Whether element is disabled or not</>} />
-  <FunctionArgument name="id" type="string" description={<>Id of the element</>} />
-  <FunctionArgument name="dataTestId" type="string" description={<>Id of the element for test purposes</>} />
+  <FunctionArgument name="disabled" type="boolean" description={<>Whether element is disabled or not.</>} />
+  <FunctionArgument name="id" type="string" description={<>Id of the element.</>} />
+  <FunctionArgument name="dataTestId" type="string" description={<>Id of the element for test purposes.</>} />
   <FunctionArgument
     name="role"
     type="string"
@@ -80,7 +80,7 @@ Return props for making an element or component clickable by mouse and keyboard 
       <>
         Provide semantic meaning to content.
         <Link size={Link.sizes.SMALL} href={"https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles"}>
-          More details
+          More details.
         </Link>
       </>
     }
@@ -90,12 +90,12 @@ Return props for making an element or component clickable by mouse and keyboard 
     type="number"
     description={
       <>
-        Specifies the tab order of an element.
+        Specifies the tab order of the element. Default value is 0.
         <Link
           size={Link.sizes.SMALL}
           href={"https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/tabindex"}
         >
-          More details
+          More details.
         </Link>
       </>
     }
@@ -105,12 +105,12 @@ Return props for making an element or component clickable by mouse and keyboard 
     type="string"
     description={
       <>
-        Defines a string value that labels an interactive element.
+        Defines a string value that labels an interactive element for assistive technologies.
         <Link
           size={Link.sizes.SMALL}
           href={"https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Attributes/aria-label"}
         >
-          More details
+          More details.
         </Link>
       </>
     }
@@ -120,12 +120,12 @@ Return props for making an element or component clickable by mouse and keyboard 
     type="boolean"
     description={
       <>
-        Used to hide non-interactive content from the accessibility API.
+        HTML attribute for hiding content from screen readers and other assistive technologies.
         <Link
           size={Link.sizes.SMALL}
           href={"https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Attributes/aria-hidden"}
         >
-          More details
+          More details.
         </Link>
       </>
     }
@@ -141,7 +141,7 @@ Return props for making an element or component clickable by mouse and keyboard 
           size={Link.sizes.SMALL}
           href={"https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Attributes/aria-haspopup"}
         >
-          More details
+          More details.
         </Link>
       </>
     }
@@ -156,7 +156,7 @@ Return props for making an element or component clickable by mouse and keyboard 
           size={Link.sizes.SMALL}
           href={"https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Attributes/aria-expanded"}
         >
-          More details
+          More details.
         </Link>
       </>
     }
@@ -175,7 +175,7 @@ Return props for making an element or component clickable by mouse and keyboard 
         <Link size={Link.sizes.SMALL} href="https://reactjs.org/docs/hooks-reference.html#useref">
           ref
         </Link>
-        object.
+        object for the clickable element.
       </>
     }
   />
@@ -190,8 +190,8 @@ Return props for making an element or component clickable by mouse and keyboard 
     description={<>Mouse down callback.</>}
   />
   <FunctionArgument name="onKeyDown" type="(event: React.MouseEvent) => void" description={<>Key down callback.</>} />
-  <FunctionArgument name="id" type="string" description={<>Id of the element</>} />
-  <FunctionArgument name="data-testid" type="string" description={<>Id of the element for test purposes</>} />
+  <FunctionArgument name="id" type="string" description={<>Id of the element.</>} />
+  <FunctionArgument name="data-testid" type="string" description={<>Id of the element for test purposes.</>} />
   <FunctionArgument
     name="role"
     type="string"
@@ -199,7 +199,7 @@ Return props for making an element or component clickable by mouse and keyboard 
       <>
         Provide semantic meaning to content.
         <Link size={Link.sizes.SMALL} href={"https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles"}>
-          More details
+          More details.
         </Link>
       </>
     }
@@ -214,7 +214,7 @@ Return props for making an element or component clickable by mouse and keyboard 
           size={Link.sizes.SMALL}
           href={"https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/tabindex"}
         >
-          More details
+          More details.
         </Link>
       </>
     }
@@ -229,7 +229,7 @@ Return props for making an element or component clickable by mouse and keyboard 
           size={Link.sizes.SMALL}
           href={"https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Attributes/aria-label"}
         >
-          More details
+          More details.
         </Link>
       </>
     }
@@ -244,7 +244,7 @@ Return props for making an element or component clickable by mouse and keyboard 
           size={Link.sizes.SMALL}
           href={"https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Attributes/aria-hidden"}
         >
-          More details
+          More details.
         </Link>
       </>
     }
@@ -260,7 +260,7 @@ Return props for making an element or component clickable by mouse and keyboard 
           size={Link.sizes.SMALL}
           href={"https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Attributes/aria-haspopup"}
         >
-          More details
+          More details.
         </Link>
       </>
     }
@@ -275,7 +275,7 @@ Return props for making an element or component clickable by mouse and keyboard 
           size={Link.sizes.SMALL}
           href={"https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Attributes/aria-expanded"}
         >
-          More details
+          More details.
         </Link>
       </>
     }
