fix checkbox import tests

--- a/src/components/Combobox/__stories__/combobox.stories.mdx
+++ b/src/components/Combobox/__stories__/combobox.stories.mdx
@@ -67,7 +67,7 @@ Combo box allowing users to filter longer lists to only the selections matching 
 
 ## Props
 
-<ArgsTable of={Combobox} />
+<ArgsTable story="Overview" />
 
 ## Usage
 
