--- a/src/components/Button/__stories__/button.stories.mdx
+++ b/src/components/Button/__stories__/button.stories.mdx
@@ -230,9 +230,11 @@ Set disable button for something that isn’t usable. Use a tooltip on hover in 
 <Canvas columns={3}>
   <Story name="On color states">
     <div style={{ display: "flex", flexDirection: "column" }}>
-      Regular
+      <span style={{ marginBottom: "var(--spacing-small)" }}>Regular</span>
       <div className="monday-storybook-button_on-color-button">
-        <Button color={Button.colors.ON_PRIMARY_COLOR} marginRight>Primary on color</Button>
+        <Button color={Button.colors.ON_PRIMARY_COLOR} marginRight>
+          Primary on color
+        </Button>
         <Button color={Button.colors.ON_PRIMARY_COLOR} kind={Button.kinds.SECONDARY} marginRight>
           Secondary on color
         </Button>
@@ -241,7 +243,7 @@ Set disable button for something that isn’t usable. Use a tooltip on hover in 
         </Button>
       </div>
       <br />
-      Disabled
+      <span style={{ marginBottom: "var(--spacing-small)" }}>Disabled</span>
       <div className="monday-storybook-button_on-color-button">
         <Button color={Button.colors.ON_PRIMARY_COLOR} disabled marginRight>
           Primary on color
