Default cursor fix; more demo examples

--- a/src/components/Chips/__stories__/chips.stories.mdx
+++ b/src/components/Chips/__stories__/chips.stories.mdx
@@ -151,16 +151,32 @@ e.g. `<Chips label="GRASS_GREEN" color={Chips.colors.GRASS_GREEN} />`
 
 ### Overflowing chip
 
-[Example for designer]. Probably shouldn't be in storybook, right? Though second example might be useful for developer
+[Demonstration examples]
 
 <Canvas>
   <Story name="Overflowing chip">
-    <Flex direction={Flex.directions.ROW} gap={Flex.gaps.LARGE}>
+    <Flex direction={Flex.directions.COLUMN} gap={Flex.gaps.LARGE}>
       <Chips label="Chip with limited width" className="monday-storybook-chips_overflowing_chip" />
       <div className="monday-storybook-chips_overflowing_chip_container">
         <Chips
           label="Chip inside container with limited width"
           className="monday-storybook-chips_overflowing_chip_container--chip"
+        />
+      </div>
+      <Chips label="Chip with limited width" className="monday-storybook-chips_overflowing_chip" disabled />
+      <div className="monday-storybook-chips_overflowing_chip_container">
+        <Chips
+          label="Chip inside container with limited width"
+          className="monday-storybook-chips_overflowing_chip_container--chip"
+          disabled
+        />
+      </div>
+      <Chips label="Chip with limited width" className="monday-storybook-chips_overflowing_chip" onClick={NOOP} />
+      <div className="monday-storybook-chips_overflowing_chip_container">
+        <Chips
+          label="Chip inside container with limited width"
+          className="monday-storybook-chips_overflowing_chip_container--chip"
+          onClick={NOOP}
         />
       </div>
     </Flex>
