--- a/src/components/Dropdown/__stories__/dropdown.stories.mdx
+++ b/src/components/Dropdown/__stories__/dropdown.stories.mdx
@@ -155,6 +155,40 @@ There are three sizes available: Small, Medium, and Large
   </Story>
 </Canvas>
 
+### Readonly
+
+<Canvas>
+  <Story name="Readonly">
+    {() => {
+      const options = useMemo(
+        () => [
+          { value: "1", label: "Option 1" },
+          { value: "2", label: "Option 2" },
+          { value: "3", label: "Option 3" }
+        ],
+        []
+      );
+      return (
+        <Flex direction={Flex.directions.ROW}>
+          <Dropdown
+            defaultValue={[options[0]]}
+            options={options}
+            readOnly
+            className="dropdown-stories-styles_spacing"
+          />
+          <Dropdown
+            multi
+            defaultValue={[options[0], options[1]]}
+            options={options}
+            readOnly
+            className="dropdown-stories-styles_spacing"
+          />
+        </Flex>
+      );
+    }}
+  </Story>
+</Canvas>
+
 ### RTL
 
 <Canvas>
