--- a/src/hooks/useListenFocusTriggers/__stories__/useListenFocusTriggers.stories.mdx
+++ b/src/hooks/useListenFocusTriggers/__stories__/useListenFocusTriggers.stories.mdx
@@ -1,7 +1,7 @@
 import { useCallback, useRef, useState } from "react";
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
 import { FunctionArgument, FunctionArguments, Link, UsageGuidelines } from "../../../storybook";
-import { useListenFocusTriggers } from "../index";
+import useListenFocusTriggers from "../index";
 import { Button, Flex } from "../../../components";
 import "../../__stories__/general-hooks-stories.scss";
 
