Tabs stories: change order of subcomponents

--- a/src/components/Tabs/__stories__/tabs.stories.mdx
+++ b/src/components/Tabs/__stories__/tabs.stories.mdx
@@ -16,7 +16,7 @@ import {
 import { tabsTemplate } from "./tabs.overview.jsx";
 import "./tabs.stories.scss";
 
-<Meta title="Navigation/Tabs/Tabs" component={Tab} subcomponents={{ TabsContext, TabList, TabPanels, TabPanel }} />
+<Meta title="Navigation/Tabs/Tabs" component={Tab} subcomponents={{ TabPanel, TabPanels, TabList, TabsContext }} />
 
 # Tabs
 
