--- a/src/components/Tabs/__stories__/tabs.stories.mdx
+++ b/src/components/Tabs/__stories__/tabs.stories.mdx
@@ -16,7 +16,7 @@ import {
 import { tabsTemplate } from "./tabs.overview.jsx";
 import "./tabs.stories.scss";
 
-<Meta title="Navigation/Tabs/Tabs" component={Tab} />
+<Meta title="Navigation/Tabs/Tabs" component={Tab} subcomponents={{ TabsContext, TabList, TabPanels, TabPanel }} />
 
 # Tabs
 
@@ -55,7 +55,7 @@ Tabs allow users to navigate between related views of content while remaining in
 />
 
 <Tip>
-  Use tabs to navigate between deferent contents, if switching between states within the same content use{" "}
+  Use tabs to navigate between different contents, if switching between states within the same content use{" "}
   <Link href="/?path=/docs/buttons-buttongroup--overview" size={Link.sizes.SMALL} withoutSpacing>
     Button group
   </Link>{" "}
@@ -116,7 +116,7 @@ Tabs animation direction
           <Tab>Third</Tab>
           <Tab disabled>Disabled</Tab>
         </TabList>
-        <TabPanels animationDirection="ltr">
+        <TabPanels animationDirection={TabPanels.animationDirections.LTR}>
           <TabPanel>First slide</TabPanel>
           <TabPanel>Second slide</TabPanel>
           <TabPanel>Third slide</TabPanel>
@@ -130,7 +130,7 @@ Tabs animation direction
           <Tab>Third</Tab>
           <Tab disabled>Disabled</Tab>
         </TabList>
-        <TabPanels>
+        <TabPanels animationDirection={TabPanels.animationDirections.RTL}>
           <TabPanel>First slide</TabPanel>
           <TabPanel>Second slide</TabPanel>
           <TabPanel>Third slide</TabPanel>
