Feature/sergeyro/css modules prerelease 1 (#1134)
* 1-a. Tab, TabPanel, TextWithHighlight, VirtualizedGrid, VirtualizedList

* 1-b. TabsContext, TabPanels, TabList, Tooltip, Toast, ToastLink

* Update snapshots

* Update snapshots

* Update snapshots

* [prerelease]

* Revert change used only to trigger prerelease

* Tab stories: animation example - TODO comment

* TabList fix stretched mode - add tabInnerClassName prop to the Tab

* TabPanels - fix static prop animationDirections

* Tabs stories: change order of subcomponents

* TabList: Rename tabWrapper and tabInner overrides

* Remove comments

* Tab props comments

* Toast: remove :global overrides

* Tooltip: used to be override of .monday-style-dialog-content-component here, but it has no effect - cause DialogContent implements same styles using hasTooltip prop - so removed

* [prerelease] Update Toast snapshots

* Refactoring

* [prerelease] TabList: fix tabWrapper and tabInner classNames transition to Tab(s)

* Refactoring - rename classNames

* [prerelease]

* [prerelease]

--- a/src/components/Tabs/__stories__/tabs.stories.mdx
+++ b/src/components/Tabs/__stories__/tabs.stories.mdx
@@ -16,7 +16,7 @@ import {
 import { tabsTemplate } from "./tabs.overview.jsx";
 import "./tabs.stories.scss";
 
-<Meta title="Navigation/Tabs/Tabs" component={Tab} subcomponents={{ TabsContext, TabList, TabPanels, TabPanel }} />
+<Meta title="Navigation/Tabs/Tabs" component={Tab} subcomponents={{ TabPanel, TabPanels, TabList, TabsContext }} />
 
 # Tabs
 
@@ -104,6 +104,7 @@ The width of the list is responsive to the screen's width.
 
 ### Motion
 
+// TODO this example demonstrates nothing - TabPanels animationDirection is getting overriden by TabsContext here, so no sense in passing animationDirection to TabPanels
 Tabs animation direction
 
 <Canvas>
